# babelfont-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: javascript.yml  pages.yml  rust.yml
babelfont/: Cargo.toml  build.rs
babelfont-ts/: .gitignore  CLASS-REGISTRY.md  package.json  tsconfig.json
babelfont-ts/src/: anchor.ts  axis.ts  color.ts  decomposedAffine.ts  features.ts  font.ts  glyph.ts  guide.ts  index.ts  instance.ts  layer.ts  master.ts  names.ts  otvalue.ts  parent.ts  position.ts  proxyUtils.ts  registry.ts  shape.ts  typeUtils.ts  underlying.ts
babelfont-ts/tests/: camelCase.test.ts  class-registry.test.ts  integration.test.ts  type-test.ts
babelfont-viewer/: package.json  tsconfig.json  webpack.config.js
babelfont-viewer/public/: index.html
babelfont-viewer/src/: index.ts  registry.ts  styles.css
babelfont/resources/: Designspace.glyphs  Fustat.glyphs  G3RTLKerning.glyphs  GlyphsFileFormatv3.glyphs  KernGroupTest.glyphs  NotoSansLimbu.glyphs  RadioCanadaDisplay.babelfont  RadioCanadaDisplay.glyphs  Tirra.babelfont  avar2test.babelfont  codepoints.txt  decomposition-test.babelfont  test-recomposition.babelfont
babelfont/resources/IbarraRealNova-BoldItalic.ufo/glyphs/: eight.onum.glif  five.onum.glif  four.onum.glif  nine.onum.glif  one.onum.glif  seven.onum.glif  six.onum.glif  three.onum.glif  two.onum.glif  zero.onum.glif
babelfont/resources/IbarraRealNova-Italic.ufo/glyphs/: eight.onum.glif  five.onum.glif  four.onum.glif  nine.onum.glif  one.onum.glif  seven.onum.glif  six.onum.glif  three.onum.glif  two.onum.glif  zero.onum.glif
babelfont/resources/NotoSans-LightItalic.ufo/: fontinfo.plist  groups.plist  kerning.plist
babelfont/resources/NotoSans-LightItalic.ufo/glyphs/: A_-cy.glif  A_.glif  A_E_small.glif  A_Y_.glif  A_acute.glif  A_breve-cy.glif  A_breve.glif  A_breveacute.glif  A_brevedotbelow.glif  A_brevegrave.glif  A_brevetilde.glif  A_circumflex.glif  A_circumflexhookabove.glif  A_circumflextilde.glif  A_dblgrave.glif  A_dieresis-cy.glif  A_dieresismacron.glif  A_dotaccent.glif  A_dotbelow.glif  A_evolapuk.glif  A_glottal.glif  A_grave.glif  A_hookabove.glif  A_ie-cy.glif  A_in-egyptological.glif  A_lef-egyptological.glif  A_lpha-latin.glif  A_lpha.glif  A_lphadasia.glif  A_lphadasiaperispomeni.glif  A_lphadasiaperispomeniprosgegrammeni.ad.glif  A_lphadasiavaria.glif  A_lphadasiavariaprosgegrammeni.ad.glif  A_lphamacron.glif  A_lphapsili.glif  A_lphapsilioxia.glif  A_lphapsilioxiaprosgegrammeni.glif  A_lphapsiliperispomeniprosgegrammeni.glif  A_lphapsiliprosgegrammeni.ad.glif  A_lphapsiliprosgegrammeni.glif  (+2038 more)
babelfont/resources/fontforge/: MontenegrinGothicOne.sfd  Ponomar.sfd
babelfont/resources/fontforge/simple.sfdir/: .notdef.glyph  a.glyph  b.glyph  font.props
babelfont/resources/fontlab/: Sepehr-Bold.babelfont  Sepehr-Bold.glyphs  Sepehr-Bold.vfj
babelfont/resources/sources/instance_ufos/: IbarraRealNova-Bold.ufo.json  IbarraRealNova-BoldItalic.ufo.json  IbarraRealNova-Italic.ufo.json  IbarraRealNova-Regular.ufo.json  IbarraRealNova-SemiBold.ufo.json  IbarraRealNova-SemiBoldItalic.ufo.json
babelfont/src/: anchor.rs  axis.rs  common.rs  convertors.rs  error.rs  features.rs  font.rs  glyph.rs  guide.rs  i18ndictionary.rs  instance.rs  interpolate.rs  layer.rs  lib.rs  load.rs  main.rs  master.rs  metrics.rs  names.rs  serde_helpers.rs  shape.rs
babelfont/src/common/: constants.rs  decomposition.rs  node.rs  otvalue.rs
babelfont/src/convertors/: designspace.rs  fontforge.rs  fontlab.rs  fontra.rs  glyphs3.rs  robocjk.rs  ttf.rs  ufo.rs  vfb.rs
babelfont/src/convertors/fontforge/: layout.rs  offsetmetrics.rs  utf7.rs
babelfont/src/convertors/fontir/: avar2.rs  color.rs  features.rs  global_metrics.rs  glyphs.rs  kerning.rs  mod.rs  static_metadata.rs  varc.rs
babelfont/src/convertors/glyphs3/: customparameters.rs
babelfont/src/convertors/robocjk/: axes.rs
babelfont/src/filters/: addinstancepermaster.rs  addmaster.rs  cleanuppaths.rs  correctconjunctcategory.rs  cubic2quadratic.rs  curve_filter_common.rs  decomposecomponentreferences.rs  dropaxis.rs  dropfeatures.rs  dropincompatiblepaths.rs  dropsparsemasters.rs  glyphsbracketlayers.rs  glyphsnumbervalue.rs  infermarkcategory.rs  makecompatible.rs  mod.rs  movekerningfromfeatures.rs  quadratic2cubic.rs  removeextraneouslayers.rs  renameglyphs.rs  resolveincludes.rs  retainglyphs.rs  rewritesmartaxes.rs  setdefaultlocation.rs  setsubcategory.rs  subsetlayout.rs
babelfont/src/filters/recomposition/: encoded.rs  mod.rs
babelfont/src/layout/: closure.rs  mod.rs  renamer.rs
babelfont/tests/: integration.rs
examples/dump-typescript/: main.rs
fontmerge/: Cargo.toml
fontmerge/src/: args.rs  designspace.rs  error.rs  glyphset.rs  kerning.rs  lib.rs  main.rs  merge.rs
fontmerge/src/layout/: closure.rs  lookupgatherer.rs  mod.rs  subsetter.rs  visitor.rs
resources/: KernGroupTest.glyphs  NotoSansGrantha-SmartComponent.glyphs  RadioCanadaDisplay.babelfont  RadioCanadaDisplay.glyphs
resources/NotoSans-LightItalic.ufo/: features.fea  lib.plist
resources/NotoSans-LightItalic.ufo/glyphs/: A_A_.glif  (+1849 more)
scripts/: gen-types.sh  rebuild-types.sh
sr-aef/: Cargo.toml
sr-aef/resources/: test.fea
sr-aef/src/: contextual.rs  gpos.rs  gsub.rs  lib.rs  main.rs  serialize.rs  variations.rs
src/: anchor.rs  axis.rs  common.rs  convertors.rs  error.rs  features.rs  font.rs  glyph.rs  guide.rs  i18ndictionary.rs  instance.rs  interpolate.rs  layer.rs  lib.rs  main.rs  master.rs  metrics.rs  names.rs  serde_helpers.rs  shape.rs
src/common/: decomposition.rs  formatspecific.rs  node.rs  otvalue.rs
src/convertors/: designspace.rs  fontforge.rs  fontir.rs  fontlab.rs  fontra.rs  glyphs3.rs  robocjk.rs  ufo.rs  vfb.rs
src/filters/: decomposecomponentreferences.rs  decomposesmartcomponents.rs  dropaxis.rs  dropfeatures.rs  dropguides.rs  dropincompatiblepaths.rs  dropinstances.rs  dropkerning.rs  dropsparsemasters.rs  dropvariations.rs  glyphsdata.rs  mod.rs  resolveincludes.rs  retainglyphs.rs  rewritesmartaxes.rs  scaleupem.rs
tests/: integration.rs
(+11 files in other folders)
