[package]
name = "babelfont"
version = "0.2.0-pre"
edition = "2021"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
license = "MIT OR Apache-2.0"
description = "A universal font format converter and processor"
repository = "https://github.com/simoncozens/babelfont-rs"
documentation = "https://docs.rs/babelfont"
keywords = ["fonts", "typography", "font-conversion", "font-processing"]

[[bin]]
name = "babelfont"
path = "src/main.rs"
required-features = ["cli"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
uuid = { version = "1.11.0", features = ["v4", "serde"] }
[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1.11.0", features = ["v4", "js", "serde"] }

[features]
default = [
    "glyphs",
    "ufo",
    "fontlab",
    "fontforge",
    "fontra",
    "fontir",
    "rayon",
    "types",
    "robocjk",
]
vfb = ["dep:vfbreader"]
glyphs = ["dep:glyphslib"]
ufo = ["dep:norad"]
fontra = []
robocjk = []
fontlab = []
fontforge = []
fontir = ["dep:fontir", "dep:fontc", "dep:fontbe"]
cli = [
    "dep:env_logger",
    "dep:clap",
    "dep:serde_json_path_to_error",
    "dep:clap-verbosity-flag",
]
rayon = ["norad/rayon"]
types = ["dep:typeshare"]

[dependencies]
chrono = { version = "0.4.3", features = ["serde"] }
glyphslib = { version = "0.2.4", optional = true }
norad = { version = "0.17.0", features = ["kurbo"], optional = true }
log = { workspace = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
regex = { workspace = true }
fontdrasil = { workspace = true }
fontir = { workspace = true, optional = true }
fontbe = { workspace = true, optional = true }
fontc = { workspace = true, optional = true }
write-fonts = { workspace = true }
kurbo = { workspace = true }
smol_str = { version = "0.3.0", features = ["serde"] }
ordered-float = "5.1.0"
indexmap = { workspace = true }
paste = "1.0.15"
env_logger = { workspace = true, optional = true }
clap = { workspace = true, optional = true, features = ["derive"] }
serde_json_path_to_error = { version = "0.1.5", optional = true }
clap-verbosity-flag = { version = "3.0.4", optional = true }
fea-rs-ast = { workspace = true }
typeshare = { version = "1.0.4", optional = true }
num-traits = "0.2.19"
vfbreader = { git = "https://github.com/simoncozens/vfbLib-rust", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
similar = "2.7.0"

[build-dependencies]
roxmltree = "0.21.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
