[package]
name = "fontmerge"
version = "0.1.0"
edition = "2024"

[dependencies]
babelfont = { version = "0.1.1", path = "../babelfont-rs" }
clap = { version = "4.5.50", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
thiserror = "2.0.17"
indexmap = "2.12.0"
clap-verbosity-flag = "3.0.4"
fontdrasil = { git = "https://github.com/googlefonts/fontc.git" }
regex = "1.12.2"
itertools = "0.14.0"
indicatif = "0.18.2"
log-once = "0.4.1"
uuid = "1.18.1"
fea-rs-ast = { version = "0.1.0", path = "../fea-rs-ast" }

[lints.clippy]
unwrap_used = "deny"
indexing_slicing = "deny"
