[package]
name = "fontmerge"
version = "0.1.0"
edition = "2024"

[dependencies]
babelfont = { version = "0.2.0-pre", path = "../babelfont" }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace =  true }
indexmap = { workspace = true }
clap-verbosity-flag = "3.0.4"
fontdrasil = { workspace = true }
regex = { workspace = true }
itertools = "0.14.0"
indicatif = "0.18.2"
log-once = "0.4.1"
uuid = "1.18.1"
fea-rs-ast = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
indexing_slicing = "deny"
